redis (6:8.0.1-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 8.0.1: https://github.com/redis/redis/releases/tag/8.0.1

 -- Redis Team <redis@redis.io>  Sun, 13 May 2025 19:52:05 +0300

redis (6:8.0.0-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 8.0.0: https://github.com/redis/redis/releases/tag/8.0.0

 -- Redis Team <redis@redis.io>  Sun, 04 May 2025 10:10:05 +0300

redis (6:7.4.3-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 7.4.3: https://github.com/redis/redis/releases/tag/7.4.3

 -- Redis Team <redis@redis.io>  Thu, 24 Apr 2025 17:10:05 +0300

redis (6:7.4.2-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 7.4.2: https://github.com/redis/redis/releases/tag/7.4.2

 -- Redis Team <redis@redis.io>  Mon, 06 Jan 2025 13:10:04 +0300

redis (6:7.4.1-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 7.4.1: https://github.com/redis/redis/releases/tag/7.4.1

 -- Redis Team <redis@redis.io>  Wed, 02 Oct 2024 22:09:22 +0300

redis (6:7.4.0-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 7.4.0: https://github.com/redis/redis/releases/tag/7.4.0

 -- Redis Team <redis@redis.io>  Mon, 29 Jul 2024 12:34:56 +0300

redis (6:7.2.5-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 7.2.5: https://github.com/redis/redis/releases/tag/7.2.5

 -- Redis Team <redis@redis.io>  Tue, 21 May 2024 14:30:55 +0300

redis (6:7.2.4-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 7.2.4: https://github.com/redis/redis/releases/tag/7.2.4

 -- Redis Team <redis@redis.io>  Tue, 09 Jan 2024 14:02:22 +0200

redis (6:7.2.3-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 7.2.3: https://github.com/redis/redis/releases/tag/7.2.3

 -- Redis Team <redis@redis.io>  Wed, 01 Nov 2023 15:29:12 +0200

redis (6:7.2.2-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Redis 7.2.2: https://github.com/redis/redis/releases/tag/7.2.2

 -- Redis Team <redis@redis.io>  Wed, 18 Oct 2023 13:19:32 +0300

redis (6:7.2.1-1rl1~@RELEASE@1) @RELEASE@; urgency=low
